config/kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: help-with-child-arrangements-ingress-modsec
  namespace: help-with-child-arrangements-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: help-with-child-arrangements-ingress-modsec-help-with-child-arrangements-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAuditEngine On
      SecRuleEngine DetectionOnly
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=help-with-child-arrangements-production"
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - help-with-child-arrangements.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - helpwithchildarrangements.service.justice.gov.uk
    secretName: help-with-child-arrangements-cert
  rules:
  - host: help-with-child-arrangements.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: help-with-child-arrangements-service
            port:
              number: 3000
  - host: helpwithchildarrangements.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: help-with-child-arrangements-service
            port:
              number: 3000
